test_scores/negative_dimers/features/Q9UJX3.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9UJX3.pkl.xz